Name:		huffman
Version:	1.0.0
License-File:	LICENSE
License:	BSD3
Author:		Maxime Henrion
Copyright:	2010, Maxime Henrion
Maintainer:	Maxime Henrion <mhenrion@gmail.com>
Bug-Reports:	http://bitbucket.org/mumux/huffman/issues/
Category:	Data, Compression
Synopsis:	Simple implementation of the Huffman algorithm
Description:
Build-Type:	Simple
Cabal-Version:	>= 1.6
Tested-with:	GHC ==6.12

Source-Repository head
  Type:			mercurial
  Location:		http://bitbucket.org/mumux/huffman/

Library
  Build-Depends:	base >= 3 && < 5, containers, fingertree
  Exposed-Modules:	Data.Compression.Huffman
  GHC-Options:		-Wall -O2 -funbox-strict-fields
